--- a/media/css/stylePartner.css
+++ b/media/css/stylePartner.css
@@ -174,6 +174,9 @@ input.uiText{
 	vertical-align: middle;
 	font-weight: normal;
 	word-wrap: break-word;
+	width: 500px;
+	display: block;
+
 }
 
 #taskAccordion td > input.uiText2{
